--- a/index02.html
+++ b/index02.html
@@ -1,1 +1,15 @@
-<a>不知道可不可以跳转到这里呢</a>
+
+<html>
+  <head>
+    <script>
+    function tijiao(var){
+      alert(var);
+    }
+    </script>
+  </head>
+  <body>
+    <a>不知道可不可以跳转到这里呢</a><br>
+    <a style="color:red;">这样也可以吗</a><br>
+    <button onclick="tijiao(this)">点击弹出确认框</button>
+  </body>
+</html>
