--- a/index02.html
+++ b/index02.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <script>
-    function tijiao(var){
-      alert(var);
+    function tijiao(){
+      alert("你好");
     }
     </script>
   </head>
   <body>
     <a>不知道可不可以跳转到这里呢</a><br>
-    <a style="color:red;">这样也可以吗</a><br>
-    <button onclick="tijiao(this)">点击弹出确认框</button>
+    <a style="color:red;">变色也可以啊</a><br>
+    <button onclick="tijiao()">点击弹出确认框</button>
   </body>
 </html>
