--- a/index.html
+++ b/index.html
@@ -1,5 +1,28 @@
-  <h2>hello body!!</h2>
+
+<html>
+<head>
+  <script>
+  function test(){
+  alert("welcome");
+  }
+  </script>
+  </head>
+  <body>
+<h2 style="">hello body!!</h2>
 <a href="index02.html">------</a><br/>
 <button>点击捐肾</button>
+</body>
+  <table align="center">
+  <th>
+    <td>姓名</td>
+    <td>年龄</td>
+    <td>地址</td>
+    <th>
+  <tr>
+    <td>涨(￣︶￣)↗</td>
+    <td>☂</td>
+    <td>ヾ(≧奋≦)〃</td>
+      </tr>
+  </table>
 
-
+</html>
