--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	}
 
 	function checkCookie() {
-		alert(this);
+		//alert(this);
 		username = getCookie('username')
 		if (username != null && username != "") {
 			alert('Welcome again ' + username + '!')
