--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<title>cq商城</title>
-<a>使用git GUI完成clone和commit</a>
+<title>cq</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/luara.top.css" />
