--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 		<table>
 			<tr>
 				<td class="com_logo"></td>
-				<td class="td150" onclick="goHome()">首页</td>
-				<td class="td150" onclick="goHome()">商家中心</td>
-				<td class="td150" onclick="goHome()">平台政策</td>
-				<td class="td150" onclick="goHome()">手机版</td>
-				<td class="td150" onclick="goHome()">个人设置</td>
-				<td class="td150" onclick="goHome()">我的订单</td>
-				<td class="td150" onclick="goHome()">购物车</td>
-				<td class="td150" onclick="goHome()">登录</td>
-				<td class="td150" onclick="goHome()">注册</td>
+				<td class="td150" onclick="goHome()">我</td>
+				<td class="td150" onclick="goHome()">是</td>
+				<td class="td150" onclick="goHome()">大</td>
+				<td class="td150" onclick="goHome()">傻</td>
+				<td class="td150" onclick="goHome()">b</td>
+				<td class="td150" onclick="goHome()">!</td>
+				<td class="td150" onclick="goHome()">你</td>
+				<td class="td150" onclick="goHome()">呢</td>
+				<td class="td150" onclick="goHome()">?</td>
 			</tr>
 		</table>
 	</div>
@@ -88,7 +88,7 @@
 </body>
 <script>
 	function goHome() {
-		window.open("http://www.bjpowernode.com");
+		window.open("http://www.gllcloud.club");
 	}
 </script>
 </html>
