--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <script src="js/jquery-1.8.3.min.js"></script>
    <!--<link rel="stylesheet" href="//res.layui.com/layui/dist/css/layui.css"  media="all">
   注意：如果你直接复制所有代码到本地，上述css路径需要改成你本地的 -->
 </head>
@@ -16,7 +15,7 @@
   <legend>生成验证码</legend>
 </fieldset>
 
-<p><a href="/python/add_num.py.txt">add_num.py</a></p>
+<p><a href="/python/add_num.py">add_num.py</a></p>
 
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
   <legend>基于文件的敏感词拦截替换</legend>
