整理文档目录

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 love
 sex
 </p>
-<p><a href="/python/filter_words.py.txt">filter_words.py</a></p>
+<p><a href="/python/filter_words.py">filter_words.py</a></p>
 
 
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
   <legend>生成兑换码</legend>
 </fieldset>
 
-<p><a href="/python/create_coupons.py.txt">create_coupons.py</a></p>
+<p><a href="/python/create_coupons.py">create_coupons.py</a></p>
 
 
 
