--- a/index.html
+++ b/index.html
@@ -3,43 +3,90 @@
 <head>
   <meta charset="utf-8">
   <title>pthon/shell</title>
+  <link rel="shortcut icon" href="img/bg.ico">
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="/js/layui/css/layui.css"  media="all">
-  <script type="text/javascript" src="/js/layui/layui.all.js"></script>
+  <link rel="stylesheet" href="js/layui/css/layui.css"  media="all">
+  <script type="text/javascript" src="js/layui/layui.all.js"></script>
   </head>
 <body>
 
+  <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
+  </fieldset>
+
+<blockquote class="layui-elem-quote">
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
-  <legend>生成验证码</legend>
+  <legend><span class="layui-badge layui-bg-orange">1.生成验证码</span></legend>
 </fieldset>
-<button data-method="offset" data-type="auto" class="layui-btn layui-btn-normal">居中弹出代码</button>
-
-<p><a href="/python/add_num.py">add_num.py</a></p>
+<iframe src="/python/add_num.html" frameborder="0" style="width: 100%; height: 300px;"></iframe>
 
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
-  <legend>基于文件的敏感词拦截替换</legend>
+  <legend><span class="layui-badge layui-bg-green">2.基于文件的敏感词拦截替换</span></legend>
 </fieldset>
-<p>北京
-程序员
-公务员
-领导
-love
-sex
-</p>
-<p><a href="/python/filter_words.py">filter_words.py</a></p>
+<div style="width: 300px; margin: 0;">
+ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="layui-badge layui-bg-black">例:</span>  <button class="layui-btn layui-btn-normal layui-btn-xs">程序员</button>
+  <button class="layui-btn layui-btn-normal layui-btn-xs">sex</button>
+  </div>
 
+<iframe src="/python/filter_words.html" frameborder="0" style="width: 100%; height: 300px;"></iframe>
 
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
-  <legend>生成兑换码</legend>
+  <legend><span class="layui-badge layui-bg-black">3.生成兑换码</span></legend>
 </fieldset>
+<iframe src="/python/create_coupons.html" frameborder="0" style="width: 100%; height: 300px;"></iframe>
 
-<p><a href="/python/create_coupons.py">create_coupons.py</a></p>
-
-
-
-
-
+<fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
+  <legend>谢谢您的评分</legend>
+</fieldset>
+<div id="evaluate2"></div>
+</blockquote>
 </body>
+
+
+
+<script>
+layui.use(['rate'], function(){
+  var rate = layui.rate;
+  //基础效果
+  rate.render({
+    elem: '#evaluate0'
+  })
+  rate.render({
+    elem: '#evaluate1'
+  })
+  rate.render({
+    elem: '#evaluate2'
+  })
+  rate.render({
+    elem: '#evaluate3'
+  })
+  });
+  // layui.use('code', function(){
+    //格式化代码
+  // layui.code();
+  // });
+</script>
+<script>
+layui.use(['util', 'laydate', 'layer'], function(){
+  var util = layui.util
+  ,laydate = layui.laydate
+  ,layer = layui.layer;
+  //固定块
+  util.fixbar({
+    bar1: true
+    ,bar2: true
+    ,css: {right: 50, bottom: 100}
+    ,bgcolor: '#393D49'
+    ,click: function(type){
+      if(type === 'bar1'){
+        layer.msg('待完善')
+      } else if(type === 'bar2') {
+        layer.msg('待完善')
+      }
+    }
+   });
+
+  });
+</script>
 </html>
