--- a/index.html
+++ b/index.html
@@ -8,39 +8,97 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="js/layui/css/layui.css"  media="all">
+    <link rel="stylesheet" href="css/divOption.css" >
   <script type="text/javascript" src="js/layui/layui.all.js"></script>
+    <script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
   </head>
 <body>
 
+
   <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
+    <!--右下角悬浮磁贴-->
   </fieldset>
 
-<blockquote class="layui-elem-quote">
-<fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
-  <legend><span class="layui-badge layui-bg-orange">1.生成验证码</span></legend>
-</fieldset>
-<iframe src="/python/add_num.html" frameborder="0" style="width: 100%; height: 300px;"></iframe>
+  <div class="layui-tab layui-tab-brief tabDiv" lay-filter="docDemoTabBrief" id="tabDiv">
 
-<fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
-  <legend><span class="layui-badge layui-bg-green">2.基于文件的敏感词拦截替换</span></legend>
-</fieldset>
-<div style="width: 300px; margin: 0;">
- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="layui-badge layui-bg-black">例:</span>  <button class="layui-btn layui-btn-normal layui-btn-xs">程序员</button>
-  <button class="layui-btn layui-btn-normal layui-btn-xs">sex</button>
+     <ul class="layui-tab-title">
+      <li class="layui-this">python</li>
+      <li>shell</li>
+      <li>go</li>
+      <li>...</li>
+    </ul>
+
+  <div class="layui-tab-content" style="height: 100px;">
+    <!--页1-->
+    <div class="layui-tab-item layui-show">
+      <blockquote class="layui-elem-quote">
+      <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
+        <legend><span class="layui-badge layui-bg-orange">1.生成验证码</span></legend>
+      </fieldset>
+      <iframe src="python/add_num.html" frameborder="0" style="width: 100%; height: 300px;"></iframe>
+
+      <fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
+        <legend><span class="layui-badge layui-bg-green">2.基于文件的敏感词拦截替换</span></legend>
+      </fieldset>
+      <div style="width: 300px; margin: 0;">
+       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="layui-badge layui-bg-black">例:</span>  <button class="layui-btn layui-btn-normal layui-btn-xs">程序员</button>
+        <button class="layui-btn layui-btn-normal layui-btn-xs">sex</button>
+        </div>
+
+      <iframe src="python/filter_words.html" frameborder="0" style="width: 100%; height: 300px;"></iframe>
+
+      <fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
+        <legend><span class="layui-badge layui-bg-black">3.生成兑换码</span></legend>
+      </fieldset>
+      <iframe src="python/create_coupons.html" frameborder="0" style="width: 100%; height: 300px;"></iframe>
+
+      <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
+        <legend>谢谢您的评分</legend>
+      </fieldset>
+      <div id="evaluate2"></div>
+      </blockquote>
+    </div>
+    <!--页2-->
+    <div class="layui-tab-item">about shell</div>
+    <div class="layui-tab-item">about go</div>
+    <div class="layui-tab-item">...</div>
   </div>
-
-<iframe src="/python/filter_words.html" frameborder="0" style="width: 100%; height: 300px;"></iframe>
-
-<fieldset class="layui-elem-field layui-field-title" style="margin-top: 50px;">
-  <legend><span class="layui-badge layui-bg-black">3.生成兑换码</span></legend>
-</fieldset>
-<iframe src="/python/create_coupons.html" frameborder="0" style="width: 100%; height: 300px;"></iframe>
-
-<fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
-  <legend>谢谢您的评分</legend>
-</fieldset>
-<div id="evaluate2"></div>
-</blockquote>
+</div>
+<!--右侧时间线-->
+<div id="timeLineDiv" class="timeLineDiv"style="display:none">
+<ul class="layui-timeline">
+  <li class="layui-timeline-item">
+    <i class="layui-icon layui-timeline-axis"></i>
+    <div class="layui-timeline-content layui-text">
+      <div class="layui-timeline-title">2018年，layui 5.0 发布。并发展成为中国最受欢迎的前端UI框架（期望）</div>
+    </div>
+  </li>
+  <li class="layui-timeline-item">
+    <i class="layui-icon layui-timeline-axis"></i>
+    <div class="layui-timeline-content layui-text">
+      <div class="layui-timeline-title">2017年，layui 里程碑版本 2.0 发布</div>
+    </div>
+  </li>
+  <li class="layui-timeline-item">
+    <i class="layui-icon layui-timeline-axis"></i>
+    <div class="layui-timeline-content layui-text">
+      <div class="layui-timeline-title">2016年，layui 首个版本发布</div>
+    </div>
+  </li>
+  <li class="layui-timeline-item">
+    <i class="layui-icon layui-timeline-axis"></i>
+    <div class="layui-timeline-content layui-text">
+      <div class="layui-timeline-title">2015年，layui 孵化</div>
+    </div>
+  </li>
+  <li class="layui-timeline-item">
+    <i class="layui-icon layui-anim layui-anim-rotate layui-anim-loop layui-timeline-axis"></i>
+    <div class="layui-timeline-content layui-text">
+      <div class="layui-timeline-title">更久前，轮子时代。维护几个独立组件：layer等</div>
+    </div>
+  </li>
+</ul>
+</div>
 </body>
 
 
@@ -80,8 +138,9 @@ layui.use(['util', 'laydate', 'layer'], function(){
     ,bgcolor: '#393D49'
     ,click: function(type){
       if(type === 'bar1'){
-        layer.msg('待完善')
+        $("#timeLineDiv").show();
       } else if(type === 'bar2') {
+          $("#timeLineDiv").hide();
         layer.msg('待完善')
       }
     }
