整理文档目录

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>pthon/shell</title>
+  <link rel="icon" href="picture.ico" type="/img/bg.ico"/>
   <link rel="shortcut icon" href="img/bg.ico">
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
