--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       <li class="layui-this">python</li>
       <li>shell</li>
       <li>go</li>
-      <li>...</li>
+      <li>picture</li>
+	  <li>zook_kafk_logstash_elsearch</li>
     </ul>
 
   <div class="layui-tab-content" style="height: 100px;">
@@ -62,8 +63,12 @@
     </div>
     <!--页2-->
     <div class="layui-tab-item">about shell</div>
-    <div class="layui-tab-item">about go</div>
-    <div class="layui-tab-item">...</div>
+    <div class="layui-tab-item">使用Gin搭建的一个goWebApi
+	<br><a src="http://123.207.74.68:9090/">link</a></div>
+    <div class="layui-tab-item">使用sbc搭建的webApi
+	<br><a src="http://123.207.74.68:8080/api/index/2">link</a></div>
+	<div class="layui-tab-item">基于kafka的logWebApi
+	<br></div>
   </div>
 </div>
 <!--右侧时间线-->
