--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <!--页2-->
     <div class="layui-tab-item">about shell</div>
     <div class="layui-tab-item">使用Gin搭建的一个goWebApi
-	<br><a src="http://123.207.74.68:9090/">link</a></div>
+	<br><a href="http://123.207.74.68:9090/">link</a></div>
     <div class="layui-tab-item">使用sbc搭建的webApi
-	<br><a src="http://123.207.74.68:8080/api/index/2">link</a></div>
+	<br><a href="http://123.207.74.68:8080/api/index/2">link</a></div>
 	<div class="layui-tab-item">基于kafka的logWebApi
 	<br></div>
   </div>
