--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li>go</li>
       <li>picture</li>
 	  <li>zook_kafk_logstash_elsearch</li>
+	  <li>nodejs_pug_retrofit</li>
     </ul>
 
   <div class="layui-tab-content" style="height: 100px;">
@@ -69,6 +70,9 @@
 	<br><a href="http://123.207.74.68:8080/api/index/2">link</a></div>
 	<div class="layui-tab-item">基于kafka的logWebApi
 	<br></div>
+	<div class="layui-tab-item">基于nodejs的简易WebApi
+	<a href="http://123.207.74.68:10100/">link</a>
+	<br>p㎡管理</div>
   </div>
 </div>
 <!--右侧时间线-->
